footer alignment fix

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,7 +10,6 @@
   }
 }
 img {
-  user-drag: none;
   user-select: none;
   -moz-user-select: none;
   -webkit-user-drag: none;
